--- a/app/src/main/res/layout/activity_last_few_year.xml
+++ b/app/src/main/res/layout/activity_last_few_year.xml
@@ -146,12 +146,12 @@
             android:textColor="@drawable/rb_text_color" />
 
         <LinearLayout
-            android:layout_margin="10dp"
-            android:padding="10dp"
-            android:background="@drawable/radio_selector"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_margin="10dp"
+            android:background="@drawable/radio_selector"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -182,11 +182,11 @@
 
 
             <RadioGroup
-                android:visibility="gone"
                 android:id="@+id/lastFewYrRadioGroupActivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <RadioButton
                     android:id="@+id/lastFewYrHobby"
