--- a/app/src/main/res/layout/activity_business_achieved.xml
+++ b/app/src/main/res/layout/activity_business_achieved.xml
@@ -104,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <CheckBox
                     android:id="@+id/certificateSixSigma"
